# ozon-rs

./: .gitignore  Cargo.toml
src/: cli.rs  database.rs  main.rs
src/controllers/: customers_controller.rs  mod.rs
src/models/: articles.rs  customers.rs  mod.rs
src/views/: articles_view.rs  mod.rs
ui/: app-window.slint  main-app.slint  main-menu.slint
ui/components/: articles.slint  bills.slint  customers.slint
