[package]
name = "ozon-rs"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.8.0"
rusqlite = {version = "*", features = ["bundled"]}
clap = { version = "4.0", features = ["derive"] }  # Optional if you want advanced CLI functionality

[build-dependencies]
slint-build = "1.8.0"
